--- a/faq.html
+++ b/faq.html
@@ -1583,7 +1583,7 @@ i have come to the conclusion that i must be an example and show that appreciati
 i felt free from this race for numbers as i moved away from social media, and i discovered over time that frequent visitors of my site are not here either by the numbers, but by the content, just as they are on other interesting sites and blogs of the internet. it definitely warms my heart to know that neatly my work honestly attracts so many people ♡<br>
 so, i removed the feedback buttons from all the pages of the site and also removed the hit counter from the index, although i still know how many ips visits my site, this is more for technical information. consider these changes as a purification, it's extremely invigorating to be free of ego needs and social fears ~<br>
 i hope hiding the numbers and keeping the written feedback is more productive for me and for you ! i wish from the bottom of my heart that you participate more avidly in this site, and not in the form of numbers, but as wonderful and real angels, which is what you are to me. ♡<br>
-( remembering that i love exchanging long emails and letters, so be sure to get in touch with me at middlepot@gmail.com if you want to talk to me )<br>
+( remembering that i love exchanging long emails and letters, so be sure to get in touch with me at letters@middlepot.com if you want to talk to me )<br>
 <br>
 <b> edit //</b> i'm little by little getting more and more clean of the "numbers", and it's making me feel really good and refreshed.. !<br>
 now i officially got rid of all of my social media with big follower numbers. yes, i did my best there, i spent time and effort posting content, but now it's time to refresh things.<br>
