--- a/index.html
+++ b/index.html
@@ -458,17 +458,17 @@ z-index: 3;
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div>
+　　09.17 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> email on: <a href="/links" style="text-decoration: none;"><font color="#DFB7B7">/links</font></a><br>
 　　09.08 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> updates on: <a href="/gaming" style="text-decoration: none;"><font color="#DFB7B7">/gaming</font></a><br>
 　　09.08 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
 　　09.07 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> materials on: <a href="/sozai" style="text-decoration: none;"><font color="#DFB7B7">/sozai</font></a><br>
 　　08.28 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> post on: <a href="/blog" style="text-decoration: none;"><font color="#DFB7B7">/blog</font></a><br>
-　　08.28 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> web page on: <a href="/links" style="text-decoration: none;"><font color="#DFB7B7">/links</font></a><br>
 </div>
 </center>
 
 <br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2021 . september . 08</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2021 . september . 17</font></font></font>
 <div style="line-height: 13px"><br><br></div>
 
 <font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="/tips"><font color="#b7a596"> send me a little tip </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
