--- a/links.html
+++ b/links.html
@@ -527,7 +527,7 @@ these are all of my active and public accounts. please only consider<br>
 the accounts on this list as mine, unless stated otherwise.<br>
 if you have any questions, please don't hesitate to contact me :</font><div style="line-height:3px;"><br>
 <br></div>
-<a style="text-decoration:none;" href="mailto:middlepot@gmail.com"><font id="linkzinho" color="#cea9a9">middlepot@gmail.com</font></a></font></center>
+<a style="text-decoration:none;" href="mailto:letters@middlepot.com"><font id="linkzinho" color="#cea9a9">letters@middlepot.com</font></a></font></center>
 
 </div>
 </div>
