--- a/contact.html
+++ b/contact.html
@@ -460,7 +460,7 @@ z-index: 3;
 			headers: {
 				'Content-Type': 'application/json'
 			},
-			body: JSON.stringify({name: name.value, email: email.value, message: message.value})
+			body: JSON.stringify({name: name.value, email: email.value, message: message.value, context: 'middlepot'})
 		});
 		name.remove();
 		email.remove();
