--- a/commissions.html
+++ b/commissions.html
@@ -453,7 +453,7 @@ z-index: 3;
 
 
 <center>
-<sub><img width="auto" height="25px" src="https://i.imgur.com/C9C7AMP.png"/></sub>　<font color="#ad9893">layout commissions open</font> <font color="#d4a5a5" style="font-size:9px">♡</font>
+<sub><img width="auto" height="25px" src="https://i.imgur.com/C9C7AMP.png"/></sub>　<font color="#ad9893">layout commissions, currently paused</font> <font color="#d4a5a5" style="font-size:9px">♡</font>
 </center>
 <br><br>
 
