--- a/recommended.html
+++ b/recommended.html
@@ -487,7 +487,7 @@ z-index: 3;
 
 　　‌‌<br><br>　<a href="https://chelemige.neocities.org" target="_blank"><img src="https://i.imgur.com/0HaSI7R.gif"></a>
 　<a href="https://gutz.neocities.org" target="_blank"><img src="https://i.imgur.com/NB1QV8c.gif"></a>
-　<a href="https://nekomy.neocities.org" target="_blank"><img src="https://i.imgur.com/tFzrXIs.png"></a>
+　<a href="https://nuange.neocities.org/" target="_blank"><img src="https://i.imgur.com/7XobVXo.gif"></a>
 
 　　‌‌<br><br>　<a href="https://teddybear-halo.neocities.org" target="_blank"><img src="https://i.imgur.com/wZIp3Fp.gif"></a>
 　<a href="https://snowy.neocities.org" target="_blank"><img src="https://i.imgur.com/Ja8LCbO.png"></a>
