--- a/status.html
+++ b/status.html
@@ -459,7 +459,7 @@ z-index: 3;
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px; height: 130px;overflow-x: hidden; padding-left: 275px; padding-top: 252px; z-index: 20; line-height:8px;"><br><br>
 <br>
-<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#cfb6bb" style="font-size:9px;">happy & anxious..</font>‌
+<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#cfb6bb" style="font-size:9px;">super tired</font>‌
 <br><br>
 <sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#cfb6bb" style="font-size:9px;">web coding</font><br><br>
 ‌‌　　<font color="#cfb6bb" style="font-size:9px;">graphic drawing & editing</font><br><br>
@@ -471,7 +471,9 @@ z-index: 3;
 <div style="padding-left: 140px; padding-top: 75px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 300px; height: 170px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 8px;">
 
+　<sub><img src="https://i.imgur.com/uvnRWje.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>09.30.21</sup></font> <font color="#cfbec2">꒱</font>　i can't believe my game is released.. !
 
+<br><br><br>
 　<sub><img src="https://i.imgur.com/3ZPNzRB.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>09.08.21</sup></font> <font color="#c4b3b6">꒱</font>　my biggest project, almost done ..
 
 <br><br><br>
@@ -497,9 +499,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/frgdxTH.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>12.12.20</sup></font> <font color="#c4b3b6">꒱</font>　i will do better
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/uvnRWje.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>11.06.20</sup></font> <font color="#cfbec2">꒱</font>　dream, dream, dream
 
 <br><br>
 
