--- a/links.html
+++ b/links.html
@@ -468,7 +468,7 @@ z-index: 3;
 <br>
 <sub><sub><sub><img width="auto" height="22px" src="https://i.imgur.com/AZjYJOQ.png"></sub></sub></sub><font color="#b89c9f"> ‌ my dev accs :</font><div style="line-height:3px;"><br>
 <br></div>
- ‌  ‌‌ <font color="#7a6b6b">steam : </font><a id="ooo"title="pc platform" href="https://steampowered.com/dev/middlepot/lists/" target="_blank" >middlepot</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">steam : </font><a id="ooo"title="pc platform" href="https://steampowered.com/dev/middlepot/" target="_blank" >middlepot</a><br>
  ‌  ‌‌ <font color="#7a6b6b">github : </font><a id="ooo" title="web platform" href="https://github.com/middlepot" target="_blank" >middlepot</a><br>
  ‌  ‌‌ <font color="#7a6b6b">apple : </font><a id="ooo" title="ios platform" href="" >middlepot</a><br>
  ‌  ‌‌ <font color="#7a6b6b">play : </font><a id="ooo" title="android platform" href="https://play.google.com/store/apps/dev?id=6235261695333627392" target="_blank" >middlepot</a><br>
