--- a/blog.html
+++ b/blog.html
@@ -470,6 +470,163 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://middlepot.com/img/13.png"/></center><br><br>
+<font size = 1><font color="#CBBBB1">
+<center>october . 11 . 2021</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub>☂️</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+how are you doing ? making sure to stay hydrated ?
+aa, this is a little late post, that should be for september .. but how busy things have been these days ; ;
+where i live the rain season has started, right at time for me to reorganize my routine, adding more comfy time to my days..
+have you been able to play my fluffy life already ? <sub>🧸</sub>
+make sure to check it on <a id="linkbjinho" href="https://myfluffy.life/steam" target="_blank">steam</a> !!! <font color="#d3a5a5" style="font-size:11px;">♡</font>
+it was released for pc on day 30, and will be released for mac, ios and android this week ( if everything goes well ) .. i must say, adapting the game to be cross-platform is quite complicated, gosh !
+but it will be worth it, so we are determined !!
+the mobile versions are currently fully working, besides 1 feature, but i want to make sure that everything is perfect. <sub>📱</sub>
+
+the browser version will be the latest because we found lots of bugs in it, and well, there are other priorities at the moment like :
+<sub>📍</sub> making the game as stable as possible, and fixing all the bugs ;
+<sub>📍</sub> keep adding content for the current players ;
+<sub>📍</sub> working on the autumn season, halloween event, seasonal stores and mini games ..
+
+but don't worry, the browser version will be finished, and everyone who purchased the game on any platform will get the full browser access for free, once it's available !
+
+the game as it is right now is quite simple, exactly as you see on the trailer, but you already have access to 200+ items ( some of these are secretly achieved through npc friendship growing ) , 3 ways of interacting with players, and 3 cumulative happiness bonuses !
+i want to keep adding items monthly, and we will make more ways of getting happiness & teddycoins, as well as more interactive stuff for players like visiting people's homes and sharing their diaries <sub>🪑</sub>
+
+it was quite complicated to make the game balanced keeping in mind all those little things, and also the future stuff, but i think it is good enough right now ( although the gameplay itself is simple and boring to some people ) , since i see people having fun and getting to dress up, decorate their profiles and exchange messages daily !! <font color="#d3a5a5" style="font-size:11px;">♡</font>
+this is what matters the most to me : that you fluffies are smiling and making good memories with the game. <sub>🎗</sub>
+
+i have seen the most precious things on my fluffy life, i am so happy with the outcome so far !!!
+i can't put into words, i can't stop smiling when seeing people's little profiles, reading their emails, and looking at the server saves.
+people have been exchange a whole lot of emails, and donation coupons, and that makes my heart so warm .. i honestly didn't expect them to be so friendly with other players, that fast !!
+the diary entries are also very very frequent. people are making my fluffy life their safe space for relaxing, making friends, write down their thoughts, and be themselves.. oh, this is such a dream coming true <sub>💕</sub>
+i want to keep growing the poofti world for making it more fun, and giving people something to look forward.
+also, seeing people playing my game on streams / videos makes me almost cry from joy !!!! i've always thought that i would feel anxious about that, but it is actually great and super motivating.
+somehow seeing the reactions makes the game seem more .. real ?
+( this whole thing still feels very dreamlike to me )
+
+i only feel very anxious now because i wanted to do so many things at once, but me and bubu are already doing our best and we must take care of ourselves too - working 12h + a day isn't healthy !
+so we will try to update the game frequently, but sometimes things can be a little delayed, and i trust you fluffies to be understanding about it, since you have been supporting me and being so kind through all these years.. how grateful i am <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+thank you for being here with me while i keep working on the poofties project, and growing not only my career, but as a person <sub>💘</sub>
+let's grow together !!
+
+to be honest, sometimes i feel like spoiling you all ; i could give you all the teddycoins and items you want, but that wouldn't actually make you feel proud of your accounts since there wouldn't be any slight effort.
+from my experience from online games, it is necessary to put at least a few hours of effort into something, or collecting items just gets pointless after a few days .....
+so i am trying to be fair with the players that do exploring and make best use of all the features that the game has to offer, instead of just giving lots of money easily for everyone <sub>⭐</sub>
+
+most information about teddycoin gathering were clarified through <a id="linkbjinho" href="https://steamcommunity.com/app/1686540/discussions/0/3088898048360495263/" target="_blank">steam discussion posts</a> , but i am open for answering more questions and most of all, for suggestions on game improvements ( specially when it comes to different features ) !!
+though it is complicated to give a reasonable suggestion without having all the information on the game mechanics as it is, so please read previous explanations on that beforehand, okay ?
+
+i will work on the first world expansion ( with the halloween event & autumn season ) once i finish writing this post, and we intend to release this update in 2 weeks ... whew, i hope everything will be fine !!!
+
+for showing on this post, i have some absolutely beautiful commissioned drawings from two artists i admire a lot, and have been wanted to support for quite some time <font color="#d3a5a5" style="font-size:11px;">♡♡♡</font>
+the first one is from <a id="linkbjinho" href="https://uwuboa.neocities.org" target="_blank">uwuboa</a> !!
+i have again commissioned a drawing of myself that i could color, so only the lineart - but she was so so sweet and gifted me with a colored version as well, so of course i will show it too !!! i love the warm colors a lot, it looks so cute.. <sub>💝</sub>
+the one you see by default was colored by me, click the image for switching to her version :
+</pre>
+<br>
+
+<center><img width="340px" height="auto" src="https://i.imgur.com/isntZyi.png"
+onclick="if(this.src=='https://i.imgur.com/isntZyi.png'){
+this.src='https://i.imgur.com/umMbCZT.png'; }
+else{ this.src='https://i.imgur.com/isntZyi.png'; }"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this nightgown looks like one i have, and am actually wearing right now.. !
+i never get used to how soft her art is, everything she draws just looks super cute and huggable .. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i appreciate her a looot as a person too and i will make sure to keep supporting her work. please go give her lots of love <sub>🌷</sub>
+
+
+now, the other drawings are from <a id="linkbjinho" href="https://luupon.art" target="_blank">luupon</a> !!
+i commissioned from her a reference sheet, since i have always dreamed of getting one from her .. she makes just the cutest ref sheets, i love it so much <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+i also asked her for a lineart only version, but then once again i got blessed with kindness and got gifted with a full colored version !!! <sub>💗</sub>
+not only that, but also another full body drawing also fully colored !!!!!!!
+and omg it is stunning .. i'm in love with her art, really. <sub>🐇</sub>
+so for showing the two drawings at once, i will put them both into the ref sheet !
+the ones you see by default was colored by me, click the image for switching to her version :
+</pre>
+<br><br>
+
+<center><img id="mine" width="430px" height="auto" src="https://i.imgur.com/BoX5z8r.gif"
+style="display: block;"
+onclick="{document.getElementById('mine').style.display = 'none';
+document.getElementById('luupon').style.display = 'block';}"/></center>
+        <script type = "text/javascript">
+            var image1 = document.getElementById("mine");
+            var currentPos1 = 0;
+            var images1 = ["https://i.imgur.com/QF1zJgt.png", "https://i.imgur.com/lqCnOzR.png"]
+
+            function volgendefoto1() {
+                if (++currentPos1 >= images1.length)
+                    currentPos1 = 0;
+
+                image1.src = images1[currentPos1];
+            }
+
+            setInterval(volgendefoto1, 1000);
+        </script>
+
+<center><img id="luupon" width="430px" height="auto" src="https://i.imgur.com/gKegpK4.png"
+style="display: none;"
+onclick="{document.getElementById('luupon').style.display = 'none';
+document.getElementById('mine').style.display = 'block';}"/></center>
+        <script type = "text/javascript">
+            var image2 = document.getElementById("luupon");
+            var currentPos2 = 0;
+            var images2 = ["https://i.imgur.com/gKegpK4.png", "https://i.imgur.com/nsazRJt.png"]
+
+            function volgendefoto2() {
+                if (++currentPos2 >= images2.length)
+                    currentPos2 = 0;
+
+                image2.src = images2[currentPos2];
+            }
+
+            setInterval(volgendefoto2, 1000);
+        </script>
+
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+aaaa i can't put into words, i don't deserve so much <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+do you recognize the apron ? and the shoes ? the golden heart locket ? heh <font color="#d3a5a5" style="font-size:11px;">♡</font>
+the second outfit is the same one from the uwuboa's drawing !!
+the little items are super adorable too, the purse is the puf one that i wear a lot, and there is a needle felted bunny pin .. !!!
+the lineart version had completely blank eyes so i tried to do something interesting with it, inspired by how luupon does the eyes on her drawings. they look so magical.. <sub>🦋</sub>
+i think mine ended up looking cute too, i had fun experimenting around !
+
+she already gifted me before with a chibi fanart of puf, and after that i thought "must commission, must, must" .. and finally, i got to do that, and she even gifted me more !!
+i want to keep supporting her as much as i can, she is such a kind person and a super talented artist. <font color="#d3a5a5" style="font-size:11px;">♡♡♡</font>
+if you don't know her already, please go check her stuff right now !!
+
+i think this is all i have for today's post, as i haven't really had time to work on other projects lately ( except needle felting shy bunny store orders, a lot )
+but i will be back soon with the halloween themed post, for showing you some cute stuff from the my fluffy life halloween event !!
+next month i hope to be able to start working on another project i am very excited for .. !!
+
+make sure to take time for self care, even if only a few hours a day, because it certainly makes a huge difference and will make life way lighter and happier !
+i have tried to do so myself, and it has been doing wonders to my health. i want to keep things this way.
+</pre><br>
+
+xoxo <sub>🤍</sub>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://middlepot.com/img/13.png"/></center><br>
+
+<br><br>
+
 <center><img src="https://middlepot.com/img/10.png"/></center><br>
 <font size = 1><font color="#CBBBB1">
 <center>august . 28 . 2021</center>
