--- a/portfolio.html
+++ b/portfolio.html
@@ -494,119 +494,20 @@ z-index: 3;
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ game design ..<br><br>
-<br><a href="/milkywoods" target="_blank"><img src="https://i.imgur.com/bQqf98x.gif"/></a><br><br>
-<font style="font-size: 8px;" color="#b38d94">
-( click to enter milky woods )
-</font>
-<br><br><br><br>
-<img src="https://i.imgur.com/hBScfeO.png"></center></font>
-<center>
-
-
-
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ digital drawing ..<br><br>
-<br><br>
-<img width="auto" height="180px" src="https://i.imgur.com/En5glYJ.png"><br><br>
-<img width="auto" height="180px" src="https://i.imgur.com/SoiKb3i.png"><br><br>
-<img width="auto" height="180px" src="https://i.imgur.com/oIj1rBe.png"><br><br>
-<img width="auto" height="180px" src="https://i.imgur.com/hSK8UjC.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/hBScfeO.png"></center></font>
-<center>
-
-
-
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ collaging ..<br><br>
 <br>
-<img width="350px" height="auto" src="https://i.imgur.com/Gc9WlWB.png"><br><br>
-<img width="350px" height="auto" src="https://i.imgur.com/PPy4T0y.png"><br><br><br>
-<img width="175px" height="auto" src="https://i.imgur.com/I5f33J8.png"> <img width="175px" height="auto" src="https://i.imgur.com/QApSfkU.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/hBScfeO.png"></center></font>
-<center>
-
-
-
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ sewing ..<br><br></font><br><br>
-<img width="auto" height="350px" src="https://i.imgur.com/wcIcph5.jpg"><br><br>
-<img width="auto" height="250px" src="https://i.imgur.com/H8KNakm.png"><br><br>
-　<img width="auto" height="200px" src="https://i.imgur.com/40yJb4m.png">
-<img width="auto" height="200px" src="https://i.imgur.com/KyF2u47.png"><br><br>
-<img width="auto" height="300px" src="https://i.imgur.com/jJRmZou.jpg"/>
-<img width="auto" height="300px" src="https://i.imgur.com/YO0l42M.jpg"/><br><br>
-<br><br><br><br>
-<img src="https://i.imgur.com/hBScfeO.png"></center></font>
-<center>
-
-
-
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ ascii art ..<br><br>
-<br><br>
-<img src="https://i.imgur.com/QgQSreB.png">
-<img src="https://i.imgur.com/gQcFKYn.png">
-<img src="https://i.imgur.com/Bs43TLX.png"><br><br>
-<img src="https://i.imgur.com/px7ebRm.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/hBScfeO.png"></center></font>
-<center>
-
-
-
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ photography ..<br><br>
-<br><br>
-<img width="400px" height="auto" src="https://i.imgur.com/kW0Y74l.png"><br><br><br><br>
-<img src="https://i.imgur.com/hBScfeO.png"></center></font>
-<center>
-
-
-
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ fonts ..<br><br>
-<a href="https://file.pooftie.me/r/puf.rar" target="_blank"><img src="https://i.imgur.com/GX3SbKH.png"></a>
-<br><br><br><br>
-<img src="https://i.imgur.com/hBScfeO.png"></center></font>
-<center>
-
-
-
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ digital coloring ..<br><br>
-<br>
-<img width="300px" height="auto" src="https://i.imgur.com/3tWbz7w.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/Lix7UYX.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/joZ4qMw.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/PLAqbSa.png"><br><br>
-<br><br><br><br>
-<img src="https://i.imgur.com/hBScfeO.png"></center></font>
-<center>
-
-
-
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ embroidery ..<br><br>
-<br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
-<br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/7fbv0PA.gif"> <img width="200px" height="auto" src="https://i.imgur.com/2rRb5tt.gif">
-<br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/EahGtcV.gif">
-<br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/OLF2amH.gif">
-<br><br><br><br>
-<img src="https://i.imgur.com/hBScfeO.png"></center></font>
-<center>
-
-
-
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ video editing ..<br><br>
-<br>
-<style>
+<center><style>
 #media-player {
+	margin-left:-10px;
 	padding:25px;
-	background-image:url(https://i.imgur.com/K9wDyg9.png);
+	background-image:url(https://i.imgur.com/IiVo6iY.png);
 	background-repeat: no-repeat;
+  background-position: center;
 	width:400px;
-	height:253px;
+	height:242px;
 }
 
 video {
+	margin-left:-5px;
 	background:#fff;
 	width:396px;
 	height:auto;
@@ -618,8 +519,8 @@ button {
 	height:15px;
 	border:none;
 	outline:none;
-	cursor: url(https://i.imgur.com/EZZ5Vol.png), progress;
-	background:transparent url('https://i.imgur.com/Xo2WHU1.png') no-repeat;
+	cursor: url(https://myfluffy.life/img/cursorhover.png), progress;
+	background:transparent url('https://myfluffy.life/img/videobuttons.png') no-repeat;
 }
 
 .pause { background-position:-19px 0; }
@@ -631,7 +532,8 @@ button {
 .replay { background-position:-133px 0; }
 
 progress {
-	color:#fff;
+	margin-left:-5px;
+	color:#eddde2;
 	font-size:8px;
 	font-family:verdana;
 	border-radius: 5px;
@@ -644,19 +546,19 @@ progress {
 	
 }
 progress::-webkit-progress-bar {
-  background-color: #fff;
+  background-color: #f7edf0;
   border-radius: 7px;
 }
 progress::-webkit-progress-value {
-  background-color: #f5e4e8;
+  background-color: #eddde2;
   border-radius: 7px;
 }
 progress::-moz-progress-bar {
-  background-color: #fff;
+  background-color: #f7edf0;
   border-radius: 7px;
 }
 progress::-moz-progress-value {
-  background-color: #f5e4e8;
+  background-color: #eddde2;
   border-radius: 7px;
 }
 </style>
@@ -769,8 +671,8 @@ function resetPlayer() {
 }
 </script>
 	<div id='media-player'>
-		<video id='media-video' controls poster="https://i.imgur.com/7TEHVIB.png" onclick="this.play()">
-			<source src='https://file.pooftie.me/v/i.mp4' type='video/mp4'>
+		<video id='media-video' controls poster="https://myfluffy.life/img/trailerpreview.jpg" onclick="this.play()">
+			<source src='https://myfluffylife-public.us-southeast-1.linodeobjects.com/final.mp4' type='video/mp4'>
 		</video>
 		<div id='media-controls'>
 			<progress id='progress-bar' min='0' max='100' value='0'/>0% played</progress>
@@ -780,12 +682,106 @@ function resetPlayer() {
 			<button id='volume-inc-button' title="+ volume" class='volume-plus' onclick='changeVolume("+");'/>　
 			<button id='volume-dec-button' title="- volume" class='volume-minus' onclick='changeVolume("-");'/>　
 			<button id='mute-button' class='mute' title="mute" onclick='toggleMute("true");'/>
-		</div>
-	</div>
+		</div></center>
+<br>
+<br><br>
+<img src="https://i.imgur.com/hBScfeO.png"></center></font>
+<center>
+
+
+
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ digital drawing ..<br><br>
+<br><br>
+<img width="auto" height="180px" src="https://i.imgur.com/En5glYJ.png"><br><br>
+<img width="auto" height="180px" src="https://i.imgur.com/SoiKb3i.png"><br><br>
+<img width="auto" height="180px" src="https://i.imgur.com/oIj1rBe.png"><br><br>
+<img width="auto" height="180px" src="https://i.imgur.com/hSK8UjC.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
+
+
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ collaging ..<br><br>
+<br>
+<img width="350px" height="auto" src="https://i.imgur.com/Gc9WlWB.png"><br><br>
+<img width="350px" height="auto" src="https://i.imgur.com/PPy4T0y.png"><br><br><br>
+<img width="175px" height="auto" src="https://i.imgur.com/I5f33J8.png"> <img width="175px" height="auto" src="https://i.imgur.com/QApSfkU.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/hBScfeO.png"></center></font>
+<center>
+
+
+
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ sewing ..<br><br></font><br><br>
+<img width="auto" height="350px" src="https://i.imgur.com/wcIcph5.jpg"><br><br>
+<img width="auto" height="250px" src="https://i.imgur.com/H8KNakm.png"><br><br>
+　<img width="auto" height="200px" src="https://i.imgur.com/40yJb4m.png">
+<img width="auto" height="200px" src="https://i.imgur.com/KyF2u47.png"><br><br>
+<img width="auto" height="300px" src="https://i.imgur.com/jJRmZou.jpg"/>
+<img width="auto" height="300px" src="https://i.imgur.com/YO0l42M.jpg"/><br><br>
+<br><br><br><br>
+<img src="https://i.imgur.com/hBScfeO.png"></center></font>
+<center>
+
+
+
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ ascii art ..<br><br>
+<br><br>
+<img src="https://i.imgur.com/QgQSreB.png">
+<img src="https://i.imgur.com/gQcFKYn.png">
+<img src="https://i.imgur.com/Bs43TLX.png"><br><br>
+<img src="https://i.imgur.com/px7ebRm.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/hBScfeO.png"></center></font>
+<center>
+
+
+
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ photography ..<br><br>
+<br><br>
+<img width="400px" height="auto" src="https://i.imgur.com/kW0Y74l.png"><br><br><br><br>
+<img src="https://i.imgur.com/hBScfeO.png"></center></font>
+<center>
+
+
+
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ fonts ..<br><br>
+<a href="https://file.pooftie.me/r/puf.rar" target="_blank"><img src="https://i.imgur.com/GX3SbKH.png"></a>
+<br><br><br><br>
+<img src="https://i.imgur.com/hBScfeO.png"></center></font>
+<center>
+
+
+
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ digital coloring ..<br><br>
+<font style="font-size: 8px;" color="#b38d94"><br>
+( click to visit the drawing artists )
+</font>
+<br><br>
+<br>
+<a href="https://ameblo.jp/jyohanna/" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/3tWbz7w.png"></a><br><br>
+<a href="https://dollbabyheart.wixsite.com/babydollsketchbook" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/Lix7UYX.png"></a><br><br>
+<a href="https://luupon.art" target="_blank"><img id="mine" width="430px" height="auto" src="https://i.imgur.com/BoX5z8r.gif"/></a>
+        <script type = "text/javascript">
+            var image1 = document.getElementById("mine");
+            var currentPos1 = 0;
+            var images1 = ["https://i.imgur.com/QF1zJgt.png", "https://i.imgur.com/lqCnOzR.png"]
+
+            function volgendefoto1() {
+                if (++currentPos1 >= images1.length)
+                    currentPos1 = 0;
+
+                image1.src = images1[currentPos1];
+            }
+
+            setInterval(volgendefoto1, 1000);
+        </script><br><br>
+<a href="https://uwuboa.neocities.org" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/isntZyi.png"></a><br><br>
+<a href="https://www.instagram.com/lambmaid/" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/joZ4qMw.png"></a><br><br>
+<br><br><br><br>
+<img src="https://i.imgur.com/hBScfeO.png"></center></font>
+<center>
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ compositing ..<br><br><br>
@@ -793,6 +789,214 @@ function resetPlayer() {
 <sub><img src="https://i.imgur.com/0iG1uGb.png"></sub> <a href="https://file.pooftie.me/a/little%20girl.mp3" target="_blank" id="linkzinhoinho">little girl .mp3</a><br>
 <sub><img src="https://i.imgur.com/0iG1uGb.png"></sub> <a href="https://file.pooftie.me/a/old%20stuffie.mp3" target="_blank" id="linkzinhoinho">old stuffie .mp3</a>
 <br><br><br><br><br>
+<img src="https://i.imgur.com/hBScfeO.png"></center></font>
+<center>
+
+
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ embroidery ..<br><br>
+<br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
+<br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/7fbv0PA.gif"> <img width="200px" height="auto" src="https://i.imgur.com/2rRb5tt.gif">
+<br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/EahGtcV.gif">
+<br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/OLF2amH.gif">
+<br><br><br><br>
+<img src="https://i.imgur.com/hBScfeO.png"></center></font>
+<center>
+
+
+
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ video editing ..<br><br>
+<br>
+<style>
+#media-player2 {
+	margin-left:-10px;
+	padding:25px;
+	background-image:url(https://i.imgur.com/K9wDyg9.png);
+	background-repeat: no-repeat;
+	width:400px;
+	height:253px;
+}
+
+video2 {
+	background:#fff;
+	width:396px;
+	height:auto;
+}
+
+button2 {
+	text-indent:-9999px;
+	width:15px;
+	height:15px;
+	border:none;
+	outline:none;
+	cursor: url(https://i.imgur.com/EZZ5Vol.png), progress;
+	background:transparent url('https://i.imgur.com/Xo2WHU1.png') no-repeat;
+}
+
+.pause2 { background-position:-19px 0; }
+.stop2 { background-position:-38px 0; }
+.volume-plus2{ background-position:-57px 0; }
+.volume-minus2 { background-position:-76px 0; }
+.mute2 { background-position:-95px 0; }
+.unmute2 { background-position:-114px 0; }
+.replay2 { background-position:-133px 0; }
+
+progress2 {
+	color:#fff;
+	font-size:8px;
+	font-family:verdana;
+	border-radius: 5px;
+	width:290px;
+	height:6px;
+	border:none;
+	outline:none;
+	margin-right:5px;
+	text-align:left;
+	
+}
+progress2::-webkit-progress-bar {
+  background-color: #fff;
+  border-radius: 7px;
+}
+progress2::-webkit-progress-value {
+  background-color: #f5e4e8;
+  border-radius: 7px;
+}
+progress2::-moz-progress-bar {
+  background-color: #fff;
+  border-radius: 7px;
+}
+progress2::-moz-progress-value {
+  background-color: #f5e4e8;
+  border-radius: 7px;
+}
+</style>
+<script>
+document.addEventListener("DOMContentLoaded", function() { initialiseMediaPlayer2(); }, false);
+
+var mediaPlayer2;
+var playPauseBtn2;
+var muteBtn2;
+var progressBar2;
+
+function initialiseMediaPlayer2() {
+	mediaPlayer2 = document.getElementById('media-video2');
+	
+	playPauseBtn2 = document.getElementById('play-pause-button2');
+	muteBtn2 = document.getElementById('mute-button2');
+	progressBar2 = document.getElementById('progress-bar2');
+
+	mediaPlayer2.controls = false;
+	
+	mediaPlayer2.addEventListener('timeupdate', updateProgressBar2, false);
+	
+	mediaPlayer2.addEventListener('play', function() {
+		changeButtonType(playPauseBtn2, 'pause');
+	}, false);
+	mediaPlayer2.addEventListener('pause', function() {
+		changeButtonType(playPauseBtn2, 'play');
+	}, false);
+	
+	mediaPlayer2.addEventListener('volumechange', function(e) { 
+		if (mediaPlayer2.muted) changeButtonType(muteBtn2, 'unmute');
+		else changeButtonType(muteBtn2, 'mute');
+	}, false);	
+	mediaPlayer2.addEventListener('ended', function() { this.pause(); }, false);	
+}
+
+function togglePlayPause2() {
+	if (mediaPlayer2.paused || mediaPlayer2.ended) {
+		changeButtonType(playPauseBtn2, 'pause');
+		mediaPlayer2.play();
+	}
+	else {
+		changeButtonType(playPauseBtn2, 'play');
+		mediaPlayer2.pause();
+	}
+}
+
+function stopPlayer2() {
+	mediaPlayer2.pause();
+	mediaPlayer2.currentTime = 0;
+}
+
+function changeVolume2(direction) {
+	if (direction === '+') mediaPlayer2.volume += mediaPlayer2.volume == 1 ? 0 : 0.1;
+	else mediaPlayer2.volume -= (mediaPlayer2.volume == 0 ? 0 : 0.1);
+	mediaPlayer2.volume = parseFloat(mediaPlayer2.volume).toFixed(1);
+}
+
+function toggleMute2() {
+	if (mediaPlayer2.muted) {
+		changeButtonType(muteBtn2, 'mute');
+		mediaPlayer2.muted = false;
+	}
+	else {
+		changeButtonType(muteBtn2, 'unmute');
+		mediaPlayer2.muted = true;
+	}
+}
+
+function replayMedia2() {
+	resetPlayer2();
+	mediaPlayer2.play();
+}
+
+function updateProgressBar2() {
+	var percentage2 = Math.floor((100 / mediaPlayer2.duration) * mediaPlayer2.currentTime);
+	progressBar2.value = percentage;
+	progressBar2.innerHTML = percentage + '% played';
+}
+
+function changeButtonType(btn, value) {
+	btn.title = value;
+	btn.innerHTML = value;
+	btn.className = value;
+}
+
+function loadVideo2() {
+	for (var i = 0; i < arguments.length; i++) {
+		var file = arguments[i].split('.');
+		var ext = file[file.length - 1];
+		if (canPlayVideo2(ext)) {
+			resetPlayer2();
+			mediaPlayer2.src = arguments[i];
+			mediaPlayer2.load();
+			break;
+		}
+	}
+}
+
+function canPlayVideo2(ext) {
+	var ableToPlay2 = mediaPlayer2.canPlayType('video/' + ext);
+	if (ableToPlay2 == '') return false;
+	else return true;
+}
+
+function resetPlayer2() {
+	progressBar2.value = 0;
+	mediaPlayer2.currentTime = 0;
+	changeButtonType(playPauseBtn2, 'play');
+}
+</script>
+	<div id='media-player2'>
+		<video id='media-video2' controls poster="https://i.imgur.com/7TEHVIB.png" onclick="this.play()">
+			<source src='https://file.pooftie.me/v/i.mp4' type='video/mp4'>
+		</video>
+		<div id='media-controls2'>
+			<progress id='progress-bar2' min='0' max='100' value='0'/>0% played</progress>
+			<button id='replay-button2' class='replay2' title="replay" onclick='replayMedia2();'/>
+			<button id='play-pause-button2' class='play' title="play" onclick='togglePlayPause2();'/>　
+			<button id='stop-button2' class='stop2' title="stop" onclick='stopPlayer2();'/>
+			<button id='volume-inc-button2' title="+ volume" class='volume-plus2' onclick='changeVolume2("+");'/>　
+			<button id='volume-dec-button2' title="- volume" class='volume-minus2' onclick='changeVolume2("-");'/>　
+			<button id='mute-button2' class='mute' title="mute" onclick='toggleMute2("true");'/>
+		</div>
+	</div>
+<br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
