--- a/index.html
+++ b/index.html
@@ -458,17 +458,17 @@ z-index: 3;
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div>
+　　10.24 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/gaming" style="text-decoration: none;"><font color="#DFB7B7">/gaming</font></a><br>
+　　10.24 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
+　　10.23 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/gaming" style="text-decoration: none;"><font color="#DFB7B7">/portfolio</font></a><br>
+　　10.20 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> updates on: <a href="/poofties" style="text-decoration: none;"><font color="#DFB7B7">/poofties</font></a><br>
 　　10.11 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> post on: <a href="/blog" style="text-decoration: none;"><font color="#DFB7B7">/blog</font></a><br>
-　　10.10 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/gaming" style="text-decoration: none;"><font color="#DFB7B7">/gaming</font></a><br>
-　　09.30 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> release on: <a href="/myfluffylife" style="text-decoration: none;"><font color="#DFB7B7">/myfluffylife</font></a><br>
-　　09.30 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> updates on: <a href="/poofties" style="text-decoration: none;"><font color="#DFB7B7">/poofties</font></a><br>
-　　09.30 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> pages on: <a href="/poofties" style="text-decoration: none;"><font color="#DFB7B7">/poofties</font></a><br>
 </div>
 </center>
 
 <br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2021 . october . 11</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2021 . october . 24</font></font></font>
 <div style="line-height: 13px"><br><br></div>
 
 <font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="/tips"><font color="#b7a596"> send me a little tip </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
