--- a/pupe/14.html
+++ b/pupe/14.html
@@ -210,47 +210,41 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf13.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf14.png">
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf13+.png"></sub></sub></sub></sub> ‌ <b>home sweet home</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf14+.png"></sub></sub></sub></sub> ‌ <b>angel in white</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
 • Heart effect/11BJ<br>
-‌ • Cork sole shoes/br12GJ<br>
+‌ • Nurse sexy tights/11AJ<br>
 ‌ • Mascara/001<br>
 ‌ • Hair glitter/12KJ<br>
-‌ • My garden Wall Paper/13AJ<br>
 ‌ • Decolletage beaty cream/11KJ<br>
+‌ • Shortcake pumps/wh12I<br>
+‌ • Dolly long05/12DJ<br>
 ‌ • Glitteringly mat effect/11EJ<br>
-‌ • Broom/12LJ<br>
-‌ • Lolita socks/13A<br>
-‌ • Simple ball earrings/wh09L<br>
+‌ • Big teddy bear/wh09LJ<br>
+‌ • First aid kit/11A<br>
 ‌ • Brilliantlyglitteringly effect/11BJ<br>
-‌ • Apple Jute Bag/wh12K<br>
+‌ • Nurse apron dress/wh11AJ<br>
 ‌ • Antique flooring/11IJ<br>
-‌ • Country dress/pr12K<br>
+‌ • Bandage pillow/11A<br>
 ‌ • Bridal inner for dress/13F<br>
-‌ • Cute pirate02/12G<br>
-‌ • Shrine maiden's ribbon hairband/12LJ<br>
-‌ • Cheeky Marmot Bag/rd12IJ<br>
-‌ • Puppy carry cart/rd12EJ<br>
+‌ • Heart nurse hat/wh11AJ<br>
 ‌ • Color contact lens 009<br>
-‌ • Picnic Blanket/12KJ<br>
 ‌ • Eye glitter/11KJ<br>
 ‌ • Angel ring effect/11EJ<br>
-‌ • Lace half pants/wh12CJ<br>
 ‌ • Tiara marriage ring/13F<br>
 ‌ • Blush 007<br>
 </font>
 </div>
 </div>
 
-<font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/home%20sweet%20home.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/12"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/14"><font color="#b08087">next outfit →</font></a>
+<font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
+<a href="https://file.pooftie.me/pupe/angel%20in%20white.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="/pupe/13"><font color="#b08087">← previous outfit</font></a>
 </font>
 
 </body>
