--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ z-index: 3;
 <br></div>
 　　10.24 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/gaming" style="text-decoration: none;"><font color="#DFB7B7">/gaming</font></a><br>
 　　10.24 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
-　　10.23 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/gaming" style="text-decoration: none;"><font color="#DFB7B7">/portfolio</font></a><br>
+　　10.23 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/portfolio" style="text-decoration: none;"><font color="#DFB7B7">/portfolio</font></a><br>
 　　10.20 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> updates on: <a href="/poofties" style="text-decoration: none;"><font color="#DFB7B7">/poofties</font></a><br>
 　　10.11 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> post on: <a href="/blog" style="text-decoration: none;"><font color="#DFB7B7">/blog</font></a><br>
 </div>
